Corrections style et alignements

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -148,6 +148,7 @@
     text-align: left;
     margin-bottom: 1rem;
     padding: 0.6rem 1rem;
+    display: block;
   }
 
   .menu li + li {
