--- a/src/components/pages/About/About.module.scss
+++ b/src/components/pages/About/About.module.scss
@@ -9,20 +9,27 @@
   align-items: center;
   @media only screen and (max-width: 768px) {
     flex-direction: column;
+    gap: 10px;
+    height: 100%;
   }
   &__image,
   &__desc {
-    width: 100%;
+    width: fit-content;
     height: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 2rem;
-    padding-left: 1rem;
+    padding: 1rem;
   }
 
   &__image {
+    width: 100%;
+    @media only screen and (max-width: 768px) {
+      height: 20vh;
+      box-shadow: inset 0 0 0 2000px rgba(10, 10, 10, 0.3);
+    }
+
     background: url("../../../assets/images/acad01.png") no-repeat;
     background-position: center;
   }
@@ -31,6 +38,15 @@
     h1 {
       font-size: 1.3rem;
       font-family: "GothamMedium";
+      @media only screen and (max-width: 768px) {
+        position: absolute;
+        top: 4rem;
+        font-size: 26px;
+        width: 40%;
+        line-height: 1.8rem !important;
+        z-index: 2;
+        color: white;
+      }
     }
     p {
       text-align: justify;
