--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -19,6 +19,7 @@
       text-align: center;
       margin: 1rem;
       font-size: 26px;
+      line-height: 2rem !important;
     }
 
     .typography6 {
